--- a/web-interface/app/templates/app/test.html
+++ b/web-interface/app/templates/app/test.html
@@ -4,8 +4,7 @@
 {% block content %}
 {% load static %}
 
-
 <h1>IS THIS FUCKING WORKING?????</h1>
-<img src="{% static 'app/content/fish.gif' %}" alt="fish">
+<img src="{% static %}" alt="fish">
 
 {% endblock %}
