--- a/web-interface/app/templates/app/test.html
+++ b/web-interface/app/templates/app/test.html
@@ -5,6 +5,6 @@
 {% load static %}
 
 <h1>IS THIS FUCKING WORKING?????</h1>
-<img src="{% static %}" alt="fish">
+<img src="{% static '/app/image/fish.gif' %}" alt="fish">
 
 {% endblock %}
