--- a/interface/style.css
+++ b/interface/style.css
@@ -1,11 +1,9 @@
 body {
-  font-family: Gill Sans, sans-serif;
+  background-color: white;
+  color: black;
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif; /* Linak font */
   margin: 0;
   padding: 0;
-}
-
-main {
-  background-color: green;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,18 +11,50 @@ main {
   height: 100vh;
 }
 
-.topbar {
-  background-color: blue;
-  position: fixed;
+button {
+  border: none;
+  background-color: lightgrey;
+  padding: 1px 1rem;
+}
+
+.clear {
+  background-color: transparent;
+  color: inherit;
+  box-shadow: none;
+}
+
+header {
+  position: absolute;
   top: 0;
   width: 100%;
 }
 
-.loginDiv {
-  background-color: red;
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.blue {
+  background-color: #1961ac;
+}
+
+.warning {
+  color: red;
+  visibility: hidden;
+}
+
+form {
+  background-color: lightgray;
+  padding: 1rem;
+  box-shadow: 0 4px 6px 2px black;
+}
+
+.grid {
   display: grid;
 }
 
-.textInput {
-  color: pink;
-}/* # sourceMappingURL=style.css.map */
+.darkMode {
+  background-color: #121212;
+  color: white;
+}/*# sourceMappingURL=style.css.map */
