--- a/interface/style.css
+++ b/interface/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: white;
   color: black;
-  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif; /* Linak font */
+  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
@@ -11,28 +11,25 @@ body {
   height: 100vh;
 }
 
-button {
-  border: none;
-  background-color: lightgrey;
-  padding: 1px 1rem;
-}
-
-.clear {
-  background-color: transparent;
-  color: inherit;
-  box-shadow: none;
+header, footer {
+  position: fixed;
+  display: flex;
+  align-items: center;
 }
 
 header {
-  position: absolute;
   top: 0;
   width: 100%;
 }
 
 footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
+}
+
+.right {
+  position: fixed;
+  right: 0;
 }
 
 .blue {
@@ -41,13 +38,32 @@ footer {
 
 .warning {
   color: red;
-  visibility: hidden;
+  display: none;
+}
+
+form, button {
+  background-color: lightgrey;
 }
 
 form {
-  background-color: lightgray;
-  padding: 1rem;
+  padding: 2rem;
   box-shadow: 0 4px 6px 2px black;
+}
+
+button {
+  border: none;
+  padding: 1rem 2rem 1px 2rem;
+  border-radius: 0.5rem 0.5rem 0 0;
+}
+
+form.hidden {
+  display: none;
+}
+
+.clear {
+  background-color: transparent;
+  color: inherit;
+  box-shadow: none;
 }
 
 .grid {
@@ -57,4 +73,67 @@ form {
 .darkMode {
   background-color: #121212;
   color: white;
-}/*# sourceMappingURL=style.css.map */
+}
+.darkMode form {
+  color: black;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+/*
+body:has(header:has(#darkModeToggle:checked)) {
+    background-color: #121212;
+    color: white;
+    -webkit-transition: .4s;
+  transition: .4s;
+
+    form {
+        color: black;
+    }
+}
+*//*# sourceMappingURL=style.css.map */
