--- a/web-interface/app/templates/app/login.html
+++ b/web-interface/app/templates/app/login.html
@@ -28,8 +28,8 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
-                {% if form.errors %}
-                <p class="validation-summary-errors">Please enter a correct user name and password.</p>
+                {% if errors %}
+                <p class="validation-summary-errors">{{errors}}</p>
                 {% endif %}
             </form>
         </section>
