--- a/web-interface/app/templates/app/layout.html
+++ b/web-interface/app/templates/app/layout.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - My Django Application</title>
+    <title>{% block title %} My Title {% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
+    {% block pagecss %}{% endblock %}
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> --> 
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
 </head>
 
@@ -35,8 +37,8 @@
     <div class="container body-content">
 {% block content %}{% endblock %}
         <hr/>
-        <footer>
-            <p>&copy; {{ year }} - My Django Application</p>
+        <footer class="blue">
+            <p>© 3AM Vibe Coders. All rights reserved.</p>
         </footer>
     </div>
 
