--- a/web-interface/app/templates/app/layout.html
+++ b/web-interface/app/templates/app/layout.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} My Title {% endblock %}</title>
+    <title>{{ title }} - My Django Application</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     {% block pagecss %}{% endblock %}
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> --> 
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/login.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
 </head>
 
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <header class="blue">
+        <h1>Table CTRL</h1>
+        <div class="right">
+            <label class="switch">
+                <input type="checkbox" id="darkModeToggle">
+                <span class="slider"></span>
+            </label>
+        </div>
+    </header>
+    <!--<div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,26 +35,21 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'test' %}">Test</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
         </div>
-    </div>
+    </div>-->
+    {% block header %}{% endblock %}
 
-    <div class="container body-content">
-{% block content %}{% endblock %}
-        <hr/>
-        <footer class="blue">
-            <p>© 3AM Vibe Coders. All rights reserved.</p>
-        </footer>
-    </div>
+    {% block content %}{% endblock %}
+
 
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
-{% block scripts %}{% endblock %}
+    {% block scripts %}{% endblock %}
 
 </body>
 </html>
