Added music, and made some changes

--- a/web-interface/app/templates/app/hello.html
+++ b/web-interface/app/templates/app/hello.html
@@ -4,8 +4,14 @@
 {% block content %}
 
 <p> Hello {{ username }}</p>
-
-
+<button onclick="window.location.href='/test'">TEST</button>
+<style>
+    button {
+        width: 50rem;
+        height: 30rem;
+        font-size: 10rem;
+    }
+</style>
 
 
 {% endblock %}
