--- a/asp_net_core/wwwroot/css/site.css
+++ b/asp_net_core/wwwroot/css/site.css
@@ -48,7 +48,6 @@ footer {
 form, button {
     background-color: lightgrey;
     outline: #121212 3px;
-    
 }
 
 form {
@@ -79,8 +78,12 @@ form.hidden {
 }
 
 .nav-message{
-    overflow: hidden;
     text-wrap-mode: nowrap;
+}
+
+.navbar-nav .nav-link {
+    padding-right: 10px;
+    padding-left: 10px;
 }
 
 .clear {
@@ -94,7 +97,7 @@ form.hidden {
 }
 
 .darkMode {
-    background-color: #121212;
+    background-color: #222222;
     color: white;
 }
 
@@ -102,51 +105,53 @@ form.hidden {
         color: black;
     }
 
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+
+.nav-item .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
-
-    .switch input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: 0.4s;
+.nav-item .switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
 }
-
-    .slider:before {
-        position: absolute;
-        content: "";
-        height: 26px;
-        width: 26px;
-        left: 4px;
-        bottom: 4px;
-        background-color: white;
-        transition: 0.4s;
-    }
-
-input:checked + .slider {
-    background-color: #2196F3;
+.nav-item .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
-
-input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+.nav-item .sliderPNG {
+  position: absolute;
+  content: "";
+  left: 4px;
+  bottom: 4px;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
-
-input:checked + .slider:before {
-    transform: translateX(26px);
+.nav-item input:checked + .slider {
+  background-color: #222222;
+}
+.nav-item input:focus + .slider {
+  box-shadow: 0 0 1px #222222;
+}
+.nav-item input:checked + .sliderPNG {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.nav-item .slider.round {
+  border-radius: 34px;
+}
+.nav-item .slider.round:before {
+  border-radius: 50%;
 }
 
 .form-inline{
