--- a/asp_net_core/Views/Shared/_LoginPartial.cshtml
+++ b/asp_net_core/Views/Shared/_LoginPartial.cshtml
@@ -3,16 +3,15 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
+<li class="nav-item">
+    <label class="switch">
+        <input type="checkbox" id="darkModeCheck">
+        <img id="sliderIMG" src="\sunny.png" alt="0"/>
+        <span class="slider round"></span>
+    </label>
+</li>
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <label class="switch">
-            <img class="sliderIMG" src="\moony.png" alt="moooooooooooon"/>
-            <img class="sliderIMG" src="\sunny.png" alt="suuuuuuuuuuuun"/>
-            <input type="checkbox">
-            <span id="darkModeSlider"class="slider round"></span>
-        </label>
-    </li>
     @* <li class="nav-item"> *@
         <a  class="nav-link nav-message text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     @* </li> *@
