--- a/asp_net_core/Views/Home/Index.cshtml
+++ b/asp_net_core/Views/Home/Index.cshtml
@@ -7,19 +7,17 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
+<!--
+<h1 class="display-4">Welcome</h1>
+<p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+-->
+@if (SignInManager.IsSignedIn(User))
+{
+    <component type="typeof(Counter)" render-mode="ServerPrerendered" />
+}
+else
+{
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-
-    @if (SignInManager.IsSignedIn(User))
-    {
-        <component type="typeof(Counter)" render-mode="ServerPrerendered" />
-    }
-    else
-    {
-        <p> please login to view the thing</p>
-    }
-
-
-</div>
+    <p> please login to view the thing</p>
+}
