Dark mode updated with forms and browser settings

--- a/asp_net_core/Views/Home/Index.cshtml
+++ b/asp_net_core/Views/Home/Index.cshtml
@@ -7,6 +7,11 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+
+@section Styles 
+{
+    <link rel="stylesheet" href="~/css/dashboard.css"/>
+}
 <!--
 <h1 class="display-4">Welcome</h1>
 <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
