--- a/asp_net_core/Areas/Identity/Pages/Account/Auth.cshtml
+++ b/asp_net_core/Areas/Identity/Pages/Account/Auth.cshtml
@@ -4,19 +4,22 @@
     ViewData["Title"] = "Login";
 }
 
+@section Styles
+{
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true"/>
+}
 
-
- <main>
-    <div>
+<div id="centerDiv">
+    <div id="signInUp">
         <button id="loginBtn" onclick="displaySignIn()">Sign in</button>
         <button id="signupBtn" class="clear" onclick="displayRegister()">Sign up</button>
     </div>
-    <form id="loginForm" method="post" asp-page-handler="Login" class="grid">
+    <form id="loginForm" method="post" asp-page-handler="Login" class="form">
         <label asp-for="LoginForm.UserName"></label>
         <input asp-for="LoginForm.UserName" class="form-control textInput" autocomplete="username" placeholder="" />
-        <label asp-for="LoginForm.Password">Password:</label>
+        <label asp-for="LoginForm.Password">Password</label>
         <!--<input name="password" class="textInput" placeholder="">-->
-        <input asp-for="LoginForm.Password" autocomplete="password"/>
+        <input asp-for="LoginForm.Password" class="form-control textInput" autocomplete="password" />
         <div asp-validation-summary="All" class="text-danger"></div>
         <span asp-validation-summary="All" class="warning"></span>
 
@@ -25,22 +28,22 @@
             <!--<input type="checkbox" id="rememberMe" name="rememberMe">-->
             <label asp-for="LoginForm.RememberMe">Remember me</label>
         </div>
-        <input type="submit" class="blue" value="Continue">
+        <input class="submitButton blue" type="submit" class="blue" value="Continue">
     </form>
 
-    <form id="signupForm" method="post" asp-page-handler="Register" class="grid hidden">
+    <form id="signupForm" method="post" asp-page-handler="Register" class="form hidden">
         <label asp-for="RegisterForm.UserName"></label>
-        <input asp-for="RegisterForm.UserName" class="textInput" autocomplete="username"/>
+        <input asp-for="RegisterForm.UserName" class="form-control textInput" autocomplete="username" />
         <label asp-for="RegisterForm.Email"></label>
-        <input asp-for="RegisterForm.Email" class="textInput" autocomplete="email" />
+        <input asp-for="RegisterForm.Email" class="form-control textInput" autocomplete="email" />
         <label asp-for="RegisterForm.Password">Password:</label>
-        <input asp-for="RegisterForm.Password" class="textInput" />
+        <input asp-for="RegisterForm.Password" class="form-control textInput" />
         <label asp-for="RegisterForm.ConfirmPassword">Confirm Password:</label>
-        <input asp-for="RegisterForm.ConfirmPassword" class="textInput">
+        <input asp-for="RegisterForm.ConfirmPassword" class="form-control textInput">
         <div asp-validation-summary="All" class="text-danger"></div>
-        <input type="submit" class="blue" value="Continue">
+        <input class="submitButton blue" type="submit" class="blue" value="Continue">
     </form>
-</main>
+</div>
 @* <div class="row">
     <div class="col-md-4">
         <main>
@@ -73,6 +76,7 @@
         </main>
     </div>
 </div> *@
+
 
 
 @section Scripts {
