--- a/asp_net_core/Views/Shared/Counter.razor
+++ b/asp_net_core/Views/Shared/Counter.razor
@@ -5,12 +5,12 @@
     <div class="topbar">
         <h1>Desks</h1>
         <p>Refresh count: @currentCount</p>
-        <button class="btn btn-primary" @onclick="CallBack"><img src="\refresh.png" alt="Refresh"/></button>
+        <button class="btn btn-primary" @onclick="CallBack"><img src="\refresh.svg" alt="Refresh"/></button>
     </div>
     <table>
         <thead>
             <tr>
-                <th>Id</th>
+                <th class="id">Id</th>
                 <th>Name</th>
                 <th class="status">Status</th>
                 <th>Errors</th>
