--- a/asp_net_core/Views/Shared/_LoginPartial.cshtml
+++ b/asp_net_core/Views/Shared/_LoginPartial.cshtml
@@ -6,25 +6,27 @@
 <li class="nav-item">
     <label class="switch">
         <input type="checkbox" id="darkModeCheck">
-        <img id="sliderIMG" src="\sunny.png" alt="0"/>
+        <img id="sliderIMG" src="\sunny.svg" alt="0"/>
         <span class="slider round"></span>
     </label>
 </li>
 @if (SignInManager.IsSignedIn(User))
 {
     @* <li class="nav-item"> *@
-        <a class="nav-link nav-message text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+    <li class="nav-item">
+        <a class="nav-link nav-message" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+    </li>
     @* </li> *@
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link">Logout</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Auth">Login / Register</a>
+        <a class="nav-link" asp-area="Identity" asp-page="/Account/Auth">Login / Register</a>
     </li>
 }
 </ul>
