--- a/asp_net_core/Views/Shared/Counter.razor
+++ b/asp_net_core/Views/Shared/Counter.razor
@@ -5,7 +5,7 @@
     <div class="topbar">
         <h1>Desks</h1>
         <p>Refresh count: @currentCount</p>
-        <button class="btn btn-primary" @onclick="CallBack"><img src="\refresh.svg" alt="Refresh"/></button>
+        <button class="btn btn-primary blue" @onclick="CallBack"><img src="\refresh.svg" alt="Refresh"/></button>
     </div>
     <table>
         <thead>
