--- a/asp_net_core/wwwroot/css/dashboard.css
+++ b/asp_net_core/wwwroot/css/dashboard.css
@@ -18,14 +18,26 @@ main > * {
     border: 1px solid black;
     border-radius: 1rem;
     margin: .5rem;
+    padding: 1rem;
+}
+
+@media screen and (max-width: 720px) {
+    main {
+        flex-direction: column;
+    }
+
+    main > * {
+        width: 100%;
+        height: 50%;
+    }
 }
 
 .topbar {
+    flex: 0 1 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 .5rem;
 }
 
 .topbar > * {
@@ -34,27 +46,23 @@ main > * {
 
 /* ------------------------------------------ TABLE */
 table {
-    border-collapse: separate;
-    border-spacing: 0 .25rem;
-    margin: 0;
-}
-.id {
-    text-align: center;
+    width: 100%;
 }
 
-tbody {
-    overflow-y: scroll;
+.tableDiv {
+    flex: 1 1 auto;
+    display: flex;
+    overflow: auto;
 }
 
-td:first-child, th:first-child {
-    padding-left: 0.5rem;
-    border-radius: 1rem 0 0 1rem;
-    font-weight: bold;
+tbody tr {
+    cursor: pointer;
 }
 
-td:last-child, th:first-child {
-    padding-right: 0.5rem;
-    border-radius: 0 1rem 1rem 0;
+thead {
+    /**/
+    position: sticky;
+    top: 0; /* height of the topbar */
 }
 
 .normal {
@@ -69,7 +77,7 @@ td:last-child, th:first-child {
     background-color: red;
 }
 
-/* ------------------------------- DARK MODE */
+/* ------------------------------------------ TABLE DARK MODE */
 .darkMode .normal {
     background-color: darkgrey;
 }
@@ -80,4 +88,11 @@ td:last-child, th:first-child {
 
 .darkMode .disconnected {
     background-color: darkred;
+}
+
+/* ------------------------------- RIGHT */
+.rightDiv {
+    display:flex;
+    justify-content: center;
+    align-content: center;
 }
