Added possibility to change desks to arbitrary heights, and added preemptive form to insert data into models for Creating desk movement patterns

--- a/asp_net_core/Areas/Identity/Pages/Account/Auth.cshtml
+++ b/asp_net_core/Areas/Identity/Pages/Account/Auth.cshtml
@@ -28,7 +28,7 @@
             <!--<input type="checkbox" id="rememberMe" name="rememberMe">-->
             <label asp-for="LoginForm.RememberMe">Remember me</label>
         </div>
-        <input class="submitButton blue" type="submit" class="blue" value="Continue">
+        <input class="submitButton blue" type="submit" value="Continue">
     </form>
 
     <form id="signupForm" method="post" asp-page-handler="Register" class="form hidden">
@@ -41,7 +41,7 @@
         <label asp-for="RegisterForm.ConfirmPassword">Confirm Password:</label>
         <input asp-for="RegisterForm.ConfirmPassword" class="form-control textInput">
         <div asp-validation-summary="All" class="text-danger"></div>
-        <input class="submitButton blue" type="submit" class="blue" value="Continue">
+        <input class="submitButton blue" type="submit" value="Continue">
     </form>
 </div>
 @* <div class="row">
